--- a/exercise.html
+++ b/exercise.html
@@ -13,6 +13,9 @@
         <div id="cat-selectors"></div>
         <svg id="map-holder"></svg>
         <div id="year-slider">
+            <svg height="20" width="1100" viewBox="0 -20 1100 20">
+                <text x="0" y="0" text-anchor="middle">1900</text>
+            </svg>
             <input type="range" min="1900" max="2050" value="1971" />
         </div>
         
